--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,32 @@
+.damier{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 80%;
+    height: 97%;
+    overflow: auto;
+}
+
 #jeu{
-    width: 100vw;
+    width: 93vw;
+    height: 158vh;
+}
+
+.droite {
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 20%;
     height: 100vh;
+    background-color: grey;
+}
+
+.haut {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 3vh;
+    background-color: grey;
 }
