--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,10 +1,40 @@
+/*----------Boutons----------*/
+body {
+    background-color: #adb5bd;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+
+button {
+    font-family: inherit;
+    border: none;
+    outline: 1px dotted rgb(37, 37, 37);
+    outline-offset: -4px;
+    background: hsl(0deg 0% 75%);
+    box-shadow: inset -1px -1px #292929, inset 1px 1px #fff, inset -2px -2px rgb(158, 158, 158), inset 2px 2px #ffffff;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 5px 30px;
+    }
+
+    button:active {
+    box-shadow: inset -1px -1px #fff, inset 1px 1px #292929, inset -2px -2px #ffffff, inset 2px 2px rgb(158, 158, 158);
+    }
+
+
+/*----------Damier/Plateau----------*/
+
 .damier{
     position: fixed;
     bottom: 0;
     left: 0;
     width: 80%;
     height: 97%;
-    overflow: auto;
+    overflow:scroll;
+    z-index: 0;
 }
 
 #jeu{
@@ -12,21 +42,71 @@
     height: 158vh;
 }
 
+/*----------Composants droit----------*/
+
 .droite {
     position: fixed;
     right: 0;
     top: 0;
-    bottom: 0;
     width: 20%;
-    height: 100vh;
-    background-color: grey;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #6c757d;
+    border: 4px double #212529;
+    z-index: 2;
 }
+
+.bouton1{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #495057;
+    border: 4px double #212529;
+    width: 15%;
+    height: 10%;
+    bottom: 0;
+    margin-bottom: 2vh;
+}
+
+/*----------Composants hauts----------*/
 
 .haut {
     position: fixed;
+    display: flex;
+    flex-direction:row;
+    align-items:baseline;
+    justify-content: baseline;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 3vh;
-    background-color: grey;
+    width: 80%;
+    height: 4vh;
+    background-color: #6c757d;
+    border: 4px double #212529;
+    z-index: 1;
 }
+
+.accueil {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 50%;
+    background-color: #6c757d;
+    border: 4px double #212529;
+    flex-direction: column;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.partie{
+    display: none;
+}
+
