--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,3 @@
-/*----------Boutons----------*/
 body {
     background-color: #adb5bd;
     margin: 0;
@@ -6,6 +5,7 @@ body {
     height: 100vh;
 }
 
+/*----------Boutons----------*/
 
 button {
     font-family: inherit;
@@ -55,7 +55,7 @@ button {
     align-items: center;
     justify-content: center;
     background-color: #6c757d;
-    border: 4px double #212529;
+    border: 4px solid #212529;
     z-index: 2;
 }
 
@@ -86,9 +86,11 @@ button {
     width: 80%;
     height: 4vh;
     background-color: #6c757d;
-    border: 4px double #212529;
+    border: 4px solid #212529;
     z-index: 1;
 }
+
+/*----------Page d'accueil + vues----------*/
 
 .accueil {
     display: flex;
@@ -99,7 +101,6 @@ button {
     background-color: #6c757d;
     border: 4px double #212529;
     flex-direction: column;
-
     position: fixed;
     top: 50%;
     left: 50%;
