Scroll fonctionnel sur le damier [FRONTEND] et ajustements de la taille des hexagones + Possibilité côté back de charger une carte crée via mapmaker

--- a/mapmaker/frontend/style.css
+++ b/mapmaker/frontend/style.css
@@ -32,14 +32,14 @@ button {
     bottom: 0;
     left: 0;
     width: 80%;
-    height: 95%;
+    height: 97%;
     overflow:scroll;
     z-index: 0;
 }
 
 #jeu{
-    width: 2800px;
-    height: 1630px;
+    width: 1000vw;
+    height: 1000vh;
 }
 
 .mini-map{
