changements front mal ajoutés au push d'avant

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -127,7 +127,10 @@ button {
 }
 
 .partie{
-    display: none;
+    background-color: #adb5bd;
+    width:100vw;
+    height:100vh;
+    display:none
 }
 
 .rejoindrePartie{
