--- a/frontend/style.css
+++ b/frontend/style.css
@@ -25,8 +25,89 @@ body {
     box-shadow: inset -1px -1px #fff, inset 1px 1px #292929, inset -2px -2px #ffffff, inset 2px 2px rgb(158, 158, 158);
 }
 
+/* From Uiverse.io by SelfMadeSystem */
+.buttonblack {
+    position: relative;
+    cursor: pointer;
+    padding: 4px 8px;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: #fff;
+    text-shadow: 1px 1px #000;
+    box-shadow:
+        inset 0px 4px 4px -3px #fff0,
+        inset 0px -3px 4px -3px #fff;
+    background: linear-gradient(#3e3939, #423f3f 50%, #000 50%);
+    isolation: isolate;
+    transition:
+        0.25s all,
+        0.1s background-position;
+}
 
-/*----------Damier/Plateau/Mini----------*/
+.buttonblack::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background: radial-gradient(circle at 50% 150%, #969797, #0000 50%);
+    background-size: 300% 50%;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transition: inherit;
+}
+
+.buttonblack::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background: radial-gradient(circle at 50% 320%, #969797, #0000 50%);
+    background-size: 300% 50%;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transition: inherit;
+}
+
+.buttonblack:hover {
+    box-shadow:
+        inset 0px 4px 4px -3px #fff5,
+        inset 0px -3px 4px -3px #fff;
+}
+
+.buttonblack:hover::before,
+.buttonblack:hover::after {
+    opacity: 1;
+}
+
+.buttonblack:active::before,
+.buttonblack:active::after {
+    opacity: 0;
+}
+
+.buttonblack:active {
+    box-shadow:
+        inset 0px 4px 4px -3px #000,
+        inset 0px -4px 4px -3px #000c,
+        inset 0px 0px 24px -3px #000a;
+    background-position: 1px 1px;
+}
+
+.buttonblack div {
+    transition: 0.1s translate;
+}
+
+.buttonblack:active div {
+    translate: 1px 1px;
+}
+
+.buttonblack {
+    margin: 0 10px;
+}
+
+
+/*----------Damier/Plateau/----------*/
 
 .damier {
     position: fixed;
@@ -50,34 +131,6 @@ body {
     height: 1440px;
     margin-top: -24px;
     margin-left: -40px;
-}
-
-/*----------Composants droit----------*/
-
-.droite {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #6c757d;
-    border: 4px solid #212529;
-    z-index: 2;
-}
-
-.bouton1 {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 15%;
-    height: 10%;
-    bottom: 0;
-    margin-bottom: 2vh;
 }
 
 /*----------Composants hauts----------*/
@@ -108,13 +161,9 @@ body {
     vertical-align: middle;
 }
 
-.buttonblack {
-    margin: 0 10px;
-}
-
 #nomPartie {
     font-size: xx-large;
-    margin-right: 60%;
+    margin-right: 40%;
 }
 
 /*----------Page d'accueil + vues----------*/
@@ -147,8 +196,6 @@ body {
     height: 100vh;
     display: none
 }
-
-
 
 #titreP2 {
     font-size: 6vh;
@@ -201,8 +248,6 @@ body {
     width: 100%;
 }
 
-
-
 #form2 button {
     font-family: inherit;
     border: none;
@@ -223,7 +268,7 @@ body {
 
 
 
-/* tableau */
+/* Tableau */
 
 #divListeJoueurs {
     overflow-y: auto;
@@ -262,21 +307,16 @@ body {
 
 #listeJoueurs tr:nth-child(even) {
     background-color: #b7b5b5;
-    /* Fond pour les lignes paires */
 }
 
 #listeJoueurs tr:nth-child(odd) {
     background-color: #727070;
-    /* Fond pour les lignes impaires */
 }
 
-/* Effet au survol */
 #listeJoueurs tr:hover {
     background-color: #979494;
-    /* Fond plus clair lors du survol */
 }
 
-/* Style spécifique pour le bouton "Rejoindre" */
 #listeJoueurs td:last-child {
     text-align: center;
 }
@@ -323,44 +363,7 @@ button:hover {
     padding: 5px 30px;
 }
 
-.fieldMoche {
-    border: none;
-}
-
-#droiteAll {
-    align-items: center;
-    justify-content: center;
-}
-
-/* Fleches */
-
-.direction1,
-.direction2 {
-    position: fixed;
-    left: 90%;
-    top: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    transform: translate(-50%, -50%);
-}
-
-.direction1 {
-    width: 15%;
-    height: 10%;
-    top: 20%;
-    z-index: 20;
-    pointer-events: auto;
-}
-
-.direction2 {
-    width: 10%;
-    height: 30%;
-    flex-direction: column;
-    z-index: 10;
-    pointer-events: auto;
-}
+/* Jeu */
 
 #vueInfoHdv {
     display: none;
@@ -449,82 +452,7 @@ button:hover {
     z-index: 4;
 }
 
-/* From Uiverse.io by SelfMadeSystem */
-.buttonblack {
-    position: relative;
-    cursor: pointer;
-    padding: 4px 8px;
-    border: 1px solid black;
-    border-radius: 4px;
-    color: #fff;
-    text-shadow: 1px 1px #000;
-    box-shadow:
-        inset 0px 4px 4px -3px #fff0,
-        inset 0px -3px 4px -3px #fff;
-    background: linear-gradient(#3e3939, #423f3f 50%, #000 50%);
-    isolation: isolate;
-    transition:
-        0.25s all,
-        0.1s background-position;
-}
-
-.buttonblack::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background: radial-gradient(circle at 50% 150%, #969797, #0000 50%);
-    background-size: 300% 50%;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-    opacity: 0;
-    transition: inherit;
-}
-
-.buttonblack::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background: radial-gradient(circle at 50% 320%, #969797, #0000 50%);
-    background-size: 300% 50%;
-    background-position: 50% 0%;
-    background-repeat: no-repeat;
-    opacity: 0;
-    transition: inherit;
-}
-
-.buttonblack:hover {
-    box-shadow:
-        inset 0px 4px 4px -3px #fff5,
-        inset 0px -3px 4px -3px #fff;
-}
-
-.buttonblack:hover::before,
-.buttonblack:hover::after {
-    opacity: 1;
-}
-
-.buttonblack:active::before,
-.buttonblack:active::after {
-    opacity: 0;
-}
-
-.buttonblack:active {
-    box-shadow:
-        inset 0px 4px 4px -3px #000,
-        inset 0px -4px 4px -3px #000c,
-        inset 0px 0px 24px -3px #000a;
-    background-position: 1px 1px;
-}
-
-.buttonblack div {
-    transition: 0.1s translate;
-}
-
-.buttonblack:active div {
-    translate: 1px 1px;
-}
+/* Prev */
 
 .dialoguebox {
     position: fixed;
