--- a/frontend/style.css
+++ b/frontend/style.css
@@ -147,12 +147,14 @@ body {
     background-color: #000;
     z-index: 1;
     color: wheat;
+    padding: 0 40px;
+    box-sizing: border-box;
 }
 
 .ressources {
     display: flex;
-    gap: 15px;
-    margin-right: 65%;
+    gap: 10px;
+    margin-right: auto;
 }
 
 .ressources img {
@@ -163,7 +165,7 @@ body {
 
 #nomPartie {
     font-size: xx-large;
-    margin-right: 40%;
+    margin-right: auto;
 }
 
 /*----------Page d'accueil + vues----------*/
@@ -384,7 +386,7 @@ button:hover {
     top: 10%;
     display: flex;
     overflow-y: auto;
-    width: 15%;
+    width: 300px;
     height: 120px;
     z-index: 5000;
 }
@@ -413,7 +415,7 @@ button:hover {
     display: flex;
     overflow: auto;
     height: 120px;
-    width: 15%;
+    width: 300px;
     z-index: 5000;
 }
 
