--- a/frontend/style.css
+++ b/frontend/style.css
@@ -367,7 +367,7 @@ button:hover {
 
 /* Jeu */
 
-#vueInfoHdv,#vueForge {
+#vueInfoHdv,#vueForge,#vueChamp {
     display: none;
     height: 350px;
     width: 350px;
