--- a/frontend/style.css
+++ b/frontend/style.css
@@ -556,9 +556,18 @@ button:hover {
     cursor: pointer;
 }
 
-#noficationDetail{
-    display: block;
+#notificationDetail{
+    display: none;
     position: fixed;
+
+    top : 150px;
+    left: 150px;
+
+    height: 500px;
+    width: 500px;
+
+    background-color: yellow;
+
 }
 
 
@@ -569,8 +578,8 @@ button:hover {
     color: inherit;
     font-size: inherit;
 
-    top: 20%;
-    left: 20%;
+    /* top: 20%;
+    left: 20%; */
 
     height: 100px;
     width: 100px;
