--- a/frontend/style.css
+++ b/frontend/style.css
@@ -383,7 +383,8 @@ button:hover {
 
 #vueInfoHdv,
 #vueForge,
-#vueChamp {
+#vueChamp,
+#vueMine {
     color: wheat;
     display: none;
     height: 500px;
@@ -403,19 +404,6 @@ button:hover {
 }
 
 
-#vueMine {
-    color: wheat;
-    display: none;
-    height: 500px;
-    width: 700px;
-    background-color: #000000e3;
-    position: fixed;
-    left: 30%;
-    top: 25%;
-    z-index: 4;
-    border: 4px double #212529;
-    overflow: auto;
-}
 
 #vueMine p {
     text-align: center;
@@ -559,6 +547,11 @@ button:hover {
     color: #fff;
 }
 
+#afficherNotif{
+    all:unset;
+    cursor: pointer;
+    font-size: 25px;
+}
 
 #vueNotifications{
     display: none;
@@ -605,3 +598,4 @@ button:hover {
     width: 100px;
     background-color: greenyellow;
 }
+
