--- a/frontend/style.css
+++ b/frontend/style.css
@@ -304,6 +304,7 @@ body {
     height: 120px;
     z-index: 5000;
     transition: 0.25s all, 0.1s background-position;
+    border-radius: 24px;
 }
 
 #vueBatiments img {
@@ -331,6 +332,7 @@ body {
     width: 300px;
     z-index: 5000;
     transition: 0.25s all, 0.1s background-position;
+    border-radius: 24px;
 }
 
 #statsUnite img {
@@ -338,6 +340,7 @@ body {
     height: 110px;
     width: 75px;
     border: 4px double #212529;
+    border-radius: 24px;
 }
 
 #unitStats {
@@ -495,7 +498,6 @@ body {
 }
 
 .contenuTuto {
-    height: 20%;
     width: 80%;
     border-radius: 16px;
     background-color: #393c3fb2;
